WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268717
[threaded-animation-resolution] ensure we stop animation-related tasks when an animated node is removed
https://bugs.webkit.org/show_bug.cgi?id=268717
Summary
[threaded-animation-resolution] ensure we stop animation-related tasks when a...
Antoine Quint
Reported
2024-02-04 12:16:53 PST
It's possible a RemoteLayerTreeNode will be removed while it is registered with RemoteScrollingCoordinatorProxyIOS has an animated node in m_animatedNodeLayerIDs. We need to ensure than when a node is removed from the remote layer tree, any notion of it being animated is cleared.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-04 12:17:15 PST
<
rdar://problem/122278779
>
Antoine Quint
Comment 2
2024-02-04 12:20:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23834
EWS
Comment 3
2024-02-04 22:32:27 PST
Committed
274086@main
(08bde5f5ce3b): <
https://commits.webkit.org/274086@main
> Reviewed commits have been landed. Closing PR #23834 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug